<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        app:cardPreventCornerOverlap="true"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_details_moviePoster"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/iv_details_content_description"
            android:scaleType="centerCrop" />

        <include layout="@layout/titlebar" />

        <include layout="@layout/movie_details"/>
        <TextView
            android:id="@+id/tv_details_plot_analysis"
            style="@style/DetailsPlotAnalysis"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/plotAnalysis" />

        <TextView
            android:id="@+id/tv_details_plot"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp" />

        <TextView
            android:id="@+id/tv_trailers_heading"
            style="@style/DetailsPlotAnalysis"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/trailers" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/tv_trailers_not_available"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/trailerNotAvailable"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_cast_heading"
            style="@style/DetailsPlotAnalysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cast" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/tv_cast_not_available"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/castNotAvailable"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_reviews_heading"
            style="@style/DetailsPlotAnalysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/reviews" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/tv_reviews_not_available"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/noReviewsFound"
            android:visibility="gone" />
    </LinearLayout>
    </android.support.v7.widget.CardView>


</android.support.v4.widget.NestedScrollView>